; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/base/extr_ecma-helpers-string.c_ecma_new_ecma_string_from_magic_string_ex_id.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/base/extr_ecma-helpers-string.c_ecma_new_ecma_string_from_magic_string_ex_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@LIT_MAGIC_STRING__COUNT = common dso_local global i64 0, align 8
@ECMA_DIRECT_STRING_MAX_IMM = common dso_local global i64 0, align 8
@ECMA_DIRECT_STRING_MAGIC = common dso_local global i32 0, align 4
@ECMA_STRING_CONTAINER_MAGIC_STRING_EX = common dso_local global i32 0, align 4
@ECMA_STRING_REF_ONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (i64)* @ecma_new_ecma_string_from_magic_string_ex_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @ecma_new_ecma_string_from_magic_string_ex_id(i64 %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 (...) @lit_get_magic_string_ex_count()
  %8 = icmp slt i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @JERRY_ASSERT(i32 %9)
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @LIT_MAGIC_STRING__COUNT, align 8
  %13 = add nsw i64 %11, %12
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @ECMA_DIRECT_STRING_MAX_IMM, align 8
  %16 = icmp ule i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i64 @JERRY_LIKELY(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %1
  %21 = load i32, i32* @ECMA_DIRECT_STRING_MAGIC, align 4
  %22 = load i64, i64* %4, align 8
  %23 = call i64 @ECMA_CREATE_DIRECT_STRING(i32 %21, i64 %22)
  %24 = inttoptr i64 %23 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %24, %struct.TYPE_6__** %2, align 8
  br label %39

25:                                               ; preds = %1
  %26 = call %struct.TYPE_6__* (...) @ecma_alloc_string()
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** %5, align 8
  %27 = load i32, i32* @ECMA_STRING_CONTAINER_MAGIC_STRING_EX, align 4
  %28 = load i32, i32* @ECMA_STRING_REF_ONE, align 4
  %29 = or i32 %27, %28
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  %32 = load i64, i64* %3, align 8
  %33 = load i64, i64* @LIT_MAGIC_STRING__COUNT, align 8
  %34 = add nsw i64 %32, %33
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  store i64 %34, i64* %37, align 8
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  store %struct.TYPE_6__* %38, %struct.TYPE_6__** %2, align 8
  br label %39

39:                                               ; preds = %25, %20
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  ret %struct.TYPE_6__* %40
}

declare dso_local i32 @JERRY_ASSERT(i32) #1

declare dso_local i64 @lit_get_magic_string_ex_count(...) #1

declare dso_local i64 @JERRY_LIKELY(i32) #1

declare dso_local i64 @ECMA_CREATE_DIRECT_STRING(i32, i64) #1

declare dso_local %struct.TYPE_6__* @ecma_alloc_string(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
